# SS18-Systemprogrammierung

./: test.txt
UE01/: demo.c
UE01/projects/: projects.sln
UE01/projects/Aufgaben1/: Aufgaben1.vcxproj  (+1 more)
UE02/: LutherBibelUnixLF.txt  genWords.c  getLine.c
UE02/project/: CMakeLists.txt  LutherBibelUnixLF.txt  binarySearchTree.c  binarySearchTree.h  main.c  strcomp  strcomp-ignore-case  strcomp-ignore-case.txt  strcomp.txt  strlen  strlen.txt
UE03/: no01Vorgabe.c  no03Vorgabe.c  no03Vorgabe.c~
UE03/no1/: CMakeLists.txt  main.c  no2.c
UE03/no3/: CMakeLists.txt  main.c
UE03/no5/: CMakeLists.txt  main.c
UE04/: CMakeLists.txt  no01Vorgabe.c  ring.h
UE05/clion-proj/: CMakeLists.txt  no01Vorgabe  no01Vorgabe.c  ring.h
UE05/clion3/: CMakeLists.txt  main.cpp
UE06/u2/: CMakeLists.txt  main.c  make2s  makeXs
UE06/u3/: CMakeLists.txt  main.c
UE06/u4/: CMakeLists.txt  main.c  main2.c  main3.c  main4.c
UE06/untitled/: CMakeLists.txt  main.c  mainXs.c
UE07/Vorgabe/: hMan.c
UE07/hMan/: CMakeLists.txt  hMan.c
UE07/hManControl/: CMakeLists.txt  hManLib.h  main.c
UE08/Vorgabe/: schlafzufaellig.h  showPhilosTest.c
UE08/project/: CMakeLists.txt  philos.c  showPhilos.c
UE09/Vorgabe/: rechteck1.cpp
UE09/rechteck2/: CMakeLists.txt  main.cpp  rechteck.cpp  rechteck.h
UE10/project/: CMakeLists.txt  FixStack.h  Stack.h  main.cpp
UE11/Vorgabe/: Hms.cpp  Hms.h  hmsTest.cpp
V04/V04BeispielePublic/: no01.c  no02.c  no03.c  no04.c
V05/V05Beispiele/: no01.c  schlafzufaellig.h
V07/V07Beispiele/: fifoA.c  fifoB.c  pipe.c  schlafzufaellig.h  signals.c
(+6 files in other folders)
